# dual-dec-newsvendor

./: .gitignore  build_note.sh  eval.all.csv  eval.py  main.py  test.sh
assets/: ieee.csl  markdown.css  markdown.tex  mermaid.min.js  meta.yaml  tufte.css
doc/: eval.all.csv  models.stoc.ipynb  repair.det.md  repair.det.tex  repair.html  repair.intros.md  repair.lag.html  repair.lag.tex.draft  repair.lagrangian-general.md
doc/tex/: repair.bib  repair.lag.bbl  repair.lag.blg  repair.lag.tex  table.tex
draft/: build_note.sh  fix_latex_equations.py  old_note.sh  repair.all.tex  repair.bib  repair.det.html  repair.det.old.md  repair.det.tex  repair.lag.md  repair.lag.tex  repair.lag.tex.draft  repair.md  repair.stoc.html  repair.stoc.md  repair.stoc.tex
dualnv/: CMakeLists.txt  FindConda.cmake  eval.py  main.py  recheck.py  small_exp.py  test.sh  test_large.sh
dualnv/cpp/: try.cpp
dualnv/cpp/aq/: CMakeLists.txt  aq.cpp
dualnv/cpp/dp/: CMakeLists.txt  action.h  dp.cpp  dp.h  sol.cpp  sol.h  state.cpp  state.h  tail.cpp  tail.h
dualnv/cpp/examples/: stage1.py
dualnv/cpp/mip/: CMakeLists.txt  gurobi_single_mip.cpp  gurobi_single_mip.h  mosek_mip.cpp  mosek_mip.h
dualnv/pyrp/: __init__.py  algorithms.py  model.py  model_sg_alt.py  model_single.py  model_single_dp.py  util.py
dualnv/pyrp/pydp/: __init__.py  pydp.py  wrapper.py
dualnv/python/: CMakeLists.txt  dp.i  main.cpp
dualnv/test/: test_10.json  test_100.json  test_150.json  test_200.json  test_300.json  test_50.json  test_batch_10.json  test_batch_dp.py  test_large_100.json  test_large_30.json  test_single_dp.py
instances/: result_5_10_10_1609166007.pk  result_5_10_15_1609166107.pk  result_5_10_20_1609166368.pk  result_5_10_25_1609167731.pk  result_5_15_10_1609170212.pk  result_5_15_15_1609170371.pk  result_5_15_20_1609170831.pk  result_5_15_25_1609172514.pk  result_5_20_20_1609175565.pk  result_5_20_25_1609177333.pk  result_5_25_20_1609181161.pk  result_5_25_25_1609183028.pk
nb/: models.ipynb  small_example.ipynb  subgrad.ipynb
pyrp/: model.py  model_alt.py  model_sg.py  model_sg_alt.py  model_single.py  model_single_dp.py  util.py
pyrp/test/: eval.py
src/: FindConda.cmake  FindGUROBI.cmake  main.py  test.json  test.sh
src/cpp/: CMakeLists.txt  try.cpp
src/cpp/aq/: aq.h
src/cpp/dp/: CMakeLists.txt  action.cpp  action.h  dp.cpp  dp.h  main.cpp  problem_queue.cpp  problem_queue.h  state.cpp  state.h  tail.cpp  test.cpp
src/cpp/mip/: CMakeLists.txt
src/pyrp/: __init__.py  conf.py  model.py  model_sg_alt.py  model_single_dp.py  test.script.pyt  util.py
src/python/: CMakeLists.txt  dp.i
src/test/: test_large_150.json  test_large_20.json  test_large_200.json  test_large_50.json
tex/: header.informs.tex  header.note.tex  header.slides.tex  main.bbl  main.blg  main.tex  repair-lag.bbl  repair-lag.blg  repair-lag.tex  repair.bib  repair.stoc.tex  repair.tex  slides.snm  slides.tex  slides_test_0223.tex  slides_test_0225.snm  slides_test_0225.tex  slides_test_0301.tex  slides_test_0306.tex  table.comp_repair_cases.tex
tex/sections/: app.tex  header.note.tex  intro.tex  lag.tex  repair.det.tex  repair.stoc.tex  repair.tex
tex/tables/: table.comp_repair_cases.tex
